tests/ui/enum_overflows.stderr
error: overflowed on value
  --> $DIR/enum_overflows.rs:13:9
   |
13 |         F,
   |         ^
